--- a/DesignPattern/DesignPattern.csproj
+++ b/DesignPattern/DesignPattern.csproj
@@ -5,10 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AyaatLibrary.ResponseModel" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Services.Interface\Services.Interface.csproj" />
+    <ProjectReference Include="..\Services\Services\Services.csproj" />
   </ItemGroup>
 
 
